APPCENTER-76:-Used java.util.Base64 instead of sun.misc.BASE64Decoder( )/Encoder() for managing Base64 in CruptoUtil Class